collection pads contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ body > #main > .top {
 }
 
 .collection .pads .pad.highlight {
-  background: #7596ff;
+  background: #fff;
 }
 
 .collection .pads.pads12 .pad {
